package com.example.smart_assess.enums;

public enum CandidatureStatus {
    PENDING, INELIGIBLE, VALIDATED,
    TEST_SENT, IN_PROGRESS, COMPLETED,
    ACCEPTED, REJECTED
}
