package com.example.smart_assess.enums;

public enum ParsingStatus {
    PENDING, PROCESSING, DONE
}
