package com.example.smart_assess.enums;

public enum QuestionType {
    MCQ, SHORT_TEXT, OPEN_ENDED
}
