package com.example.smart_assess.enums;

public enum Role {
    CANDIDATE, MANAGER, HR
}
