package com.example.smart_assess.enums;

public enum TestStatus {
    DRAFT, ASSIGNED, READY, IN_PROGRESS,
    SUBMITTED, EVALUATED, EXPIRED
}
