@startuml SmartAssess Entities and Relationships

!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
  BorderColor #2E86AB
  BackgroundColor #FFFFFF
  ArrowColor #2E86AB
}

' ===== ENTITIES =====
abstract class User {
  - Long id
  - String email
  - String password
  - String firstName
  - String lastName
  - String phone
  - Role role
  - LocalDateTime createdAt
}

class Candidate {
  - String phone
  - CandidateCV cv
  - List<Candidature> candidatures
}
Candidate --|> User

class Manager {
  - String department
  - List<InternshipPosition> internshipPositions
}
Manager --|> User

class HR {
  - String department
}
HR --|> User

class InternshipPosition {
  - Long id
  - String title
  - String description
  - String company
  - List<String> requiredSkills
  - List<String> acceptedDomains
  - Boolean isActive
  - Manager createdBy
  - LocalDateTime createdAt
  - LocalDateTime updatedAt
  - List<Candidature> candidatures
}

class Candidature {
  - Long id
  - Candidate candidate
  - InternshipPosition internshipPosition
  - CandidatureStatus status
  - String rejectionReason
  - LocalDateTime appliedAt
  - LocalDateTime updatedAt
  - GeneratedTest generatedTest
}

class CandidateCV {
  - Long id
  - Candidate candidate
  - String fileName
  - byte[] fileData
  - Long fileSizeBytes
  - ParsingStatus parsingStatus
  - LocalDateTime uploadDate
  - TechnicalProfile technicalProfile
}

class TechnicalProfile {
  - Long id
  - CandidateCV cv
  - JsonNode parsedData
  - LocalDateTime createdAt
}

class GeneratedTest {
  - Long id
  - Candidature candidature
  - InternshipPosition internshipPosition
  - String token
  - TestStatus status
  - Integer timeLimitMinutes
  - LocalDateTime assignedAt
  - LocalDateTime deadline
  - LocalDateTime createdAt
  - LocalDateTime startedAt
  - LocalDateTime submittedAt
  - Integer timeSpentMinutes
  - Integer tabSwitchCount
  - boolean isAutoSubmitted
  - List<TestQuestion> questions
  - List<Answer> answers
  - EvaluationResult evaluationResult
}

class TestQuestion {
  - Long id
  - GeneratedTest test
  - String questionText
  - QuestionType questionType
  - JsonNode options
  - String correctAnswer
  - String skillTag
  - Double maxScore
  - Integer orderIndex
  - List<Answer> answers
}

class Answer {
  - Long id
  - GeneratedTest test
  - TestQuestion question
  - String answerText
  - String selectedOption
  - Boolean isCorrect
  - Double scoreObtained
  - Double maxScore
  - LocalDateTime createdAt
}

class EvaluationResult {
  - Long id
  - GeneratedTest test
  - Integer totalScore
  - Integer maxScore
  - Double finalScore
  - Integer totalQuestions
  - Integer correctAnswers
  - Map<String, SkillScore> skillScores
  - LocalDateTime createdAt
}

class SkillScore {
  - Integer correct
  - Integer total
}
SkillScore --* EvaluationResult

' ===== ENUMS =====
enum Role {
  CANDIDATE
  MANAGER
  HR
  ADMIN
}

enum CandidatureStatus {
  PENDING
  ACCEPTED
  REJECTED
  TEST_SENT
  TEST_COMPLETED
  UNDER_REVIEW
  APPROVED
  FINAL_REJECTED
}

enum TestStatus {
  DRAFT
  ASSIGNED
  IN_PROGRESS
  SUBMITTED
  EVALUATED
  EXPIRED
}

enum QuestionType {
  MCQ
  TEXT
  CODING
  TRUE_FALSE
}

enum ParsingStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

' ===== RELATIONSHIPS BASED ON CODE ANALYSIS =====

' User hierarchy inheritance
User <|-- Candidate
User <|-- Manager  
User <|-- HR

' User to entity relationships
Candidate "1" --> "0..1" CandidateCV : has >
Candidate "1" --> "0..*" Candidature : submits >
Manager "1" --> "0..*" InternshipPosition : creates >

' Business domain relationships
InternshipPosition "1" --> "0..*" Candidature : receives >
Candidature "1" --> "1" Candidate : belongs to >
Candidature "1" --> "1" InternshipPosition : applies to >
Candidature "1" --> "0..1" GeneratedTest : generates >

' CV and Technical Profile relationships
CandidateCV "1" --> "1" Candidate : belongs to >
CandidateCV "1" --> "0..1" TechnicalProfile : analyzed by >
TechnicalProfile "1" --> "1" CandidateCV : analyzes >

' Test system relationships
GeneratedTest "1" --> "1" Candidature : for >
GeneratedTest "1" --> "1" InternshipPosition : for >
GeneratedTest "1" --> "0..*" TestQuestion : contains >
GeneratedTest "1" --> "0..*" Answer : receives >
GeneratedTest "1" --> "0..1" EvaluationResult : evaluated by >

TestQuestion "1" --> "1" GeneratedTest : part of >
TestQuestion "1" --> "0..*" Answer : answered by >

Answer "1" --> "1" GeneratedTest : for >
Answer "1" --> "1" TestQuestion : answers >

EvaluationResult "1" --> "1" GeneratedTest : evaluates >

' Enum usage
User --> Role : has >
Candidature --> CandidatureStatus : has >
GeneratedTest --> TestStatus : has >
TestQuestion --> QuestionType : has >
CandidateCV --> ParsingStatus : has >

@enduml
